[package]
name = "quest-rue"
version = "0.1.0"
description = "A Tauri App"
authors = ["Fernthedev"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
protoc-rust = "2"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
bytes = "*"
futures = "*"
anyhow = "1.0"
protobuf = { version = "3", features = ["with-bytes"] }
serde_json = "1.0"
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
opt-level = 3
