[package]
name = "quest-rue"
version = "0.1.0"
description = "A Tauri App"
authors = ["Fernthedev"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-window-state = { version = "2" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
bytes = "*"
futures = "*"
anyhow = "1.0"
serde_json = "1.0"
tauri = { version = "2", features = [ "devtools"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
tauri-plugin-shell = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
opt-level = 3
